example/backend/http-echo-3.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: http-echo-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-echo-3
  template:
    metadata:
      labels:
        app: http-echo-3
    spec:
      containers:
        - name: http-echo
          image: "haproxytech/http-echo:latest"
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8888
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: http-echo-3
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: https
      protocol: TCP
      port: 443
      targetPort: https
  selector:
    app: http-echo-3
