example/backend/gateway-2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-2
spec:
  gatewayClassName: haproxy
  listeners:
  - name: http
    port: 8090
    protocol: HTTP
    hostname: "*.wrong"
    allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
  - name: http2
    protocol: HTTP
    port: 8091
    hostname: "*.wrong"
    allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
