example/backend/route-2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-2
spec:
  parentRefs:
  - name: gateway-1
    sectionName: http
  hostnames:
  - "example.haproxy"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /route2
    backendRefs:
    - name: http-echo-1
      port: 80
      weight: 77
    - name: http-echo-2
      port: 80
      weight: 33
      # filters:
      # - type: RequestHeaderModifier
      #   requestHeaderModifier:
      #     set:
      #     - name: X-Canary-Flag
      #       value: "active"
